fix : in the failure to properly handle valid and invalid nodes when listening to the UpstreamList, which results in errors with valid instances.
1. 缓存实例逻辑修复
2. 新增通过 selectorId 获取健康实例方法
3. weight 支持 set 方法
4. 重写 Upstream equals 方法(去除 weight 参与相等校验)

issues: #6144 https://github.com/apache/shenyu/issues/6144